err.log

/home/chris/Documents/node/server.coffee:1
unction (exports, require, module, __filename, __dirname) { require 'coffee-sc
                                                                    ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Unexpected string
    at Module._compile (module.js:439:25)
    at Object.Module._extensions..js (module.js:474:10)
    at Module.load (module.js:356:32)
    at Function.Module._load (module.js:312:12)
    at Function.Module.runMain (module.js:497:10)
    at startup (node.js:119:16)
    at node.js:906:3
